# grpc-test

./: .gitattributes  .gitignore  CMakeLists.txt  grpc_client.cpp  grpc_fileio_client.cpp  grpc_server.cpp  grpc_simple_client.cpp
docker/: Dockerfile  Dockerfile.grpc  Dockerfile.grpc-dev  docker-build.sh  docker-run.sh
protos/: fileio.proto  reflection.proto  simple.proto
sample/: readme.md  zenkoku.sqlite3
src/: CMakeLists.txt  grpc_server.cpp
src/reflection/: CMakeLists.txt  reflection_client.cpp  reflection_server.h
src/simple/: CMakeLists.txt  grpc_server.cpp  simple_client.cpp  simple_server.h
